osv ajax over https

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         console.log(bbBottomRight);
         // bbTopLeft=37.873227357246435%2C-122.684326171875&bbBottomRight=37.64740301352141%2C-121.83906555175781&drawTracks=&platform=web&page=5&ipp=3000&action=false&zoom=11
         $.ajax({
-          "url": "http://openstreetview.com/tracks",
+          "url": "https://openstreetview.com/tracks",
           "method": "POST",
           "data": {
             "bbTopLeft": bbTopLeft,
